--- a/app/globals.css
+++ b/app/globals.css
@@ -23,3 +23,11 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@layer base {
+
+  input:-moz-autofill {
+    background-color: var(--input-bg) !important;
+    color: var(--input-text) !important;
+  }
+}
