--- a/app/globals.css
+++ b/app/globals.css
@@ -39,11 +39,9 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
 
-html.modal-open {
-  scrollbar-gutter: auto !important;
-}
 
 @layer base {
 
