--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,7 @@
   --color-primary-100: #E3E9E2;
   --color-primary-50: #F3F6F3;
   --color-neutral-300: #B0B0B0;
+  --color-neutral-900: #3D3D3D;
   --color-neutral-950: #121212;
   --color-neutral-white: #FFFFFF;
   ;
