feat- 增加購物車頁面和基本RWD

--- a/app/globals.css
+++ b/app/globals.css
@@ -46,6 +46,14 @@ body {
   overflow-x: hidden;
 }
 
+/*內頁scroll bar消失 保持滾動*/
+#main-scroll-container::-webkit-scrollbar {
+  display: none;
+}
+#main-scroll-container {
+  -ms-overflow-style: none;  /* IE & Edge */
+  scrollbar-width: none;     /* Firefox */
+}
 
 @layer base {
   input:-moz-autofill {
