--- a/styles/button.css
+++ b/styles/button.css
@@ -1,6 +1,6 @@
 @layer components {
     .btn-primary {
         @apply px-4 py-2 rounded-2xl bg-primary-500 font-semibold text-neutral-white hover:bg-primary-300 
-        hover:text-neutral-950 hover:shadow-xl cursor-pointer;
+        hover:text-primary-500 cursor-pointer;
     }
 }
