--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,7 @@
   --color-primary-300: #A1B4A2;
   --color-primary-100: #E3E9E2;
   --color-primary-50: #F3F6F3;
+  --color-neutral-100: #E7E7E7;
   --color-neutral-300: #B0B0B0;
   --color-neutral-900: #3D3D3D;
   --color-neutral-950: #121212;
