--- a/styles/button.css
+++ b/styles/button.css
@@ -6,4 +6,10 @@
          focus:outline-none focus:ring-4 focus:ring-primary-300/60;
          cursor: pointer;
  }
+ .btn-error {
+     @apply px-4 py-2 rounded-2xl font-semibold text-white bg-red-700 hover:bg-red-600 
+     hover:bg-red-500 
+     active:bg-red-500 focus:ring-red-300/60;
+     cursor: pointer;
+ }
 }
